--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 	</head>
 	<body>
-		<h1>COFFEE HAUS</h1>
+		<div id="header-page">
+			<h1>COFFEE HAUS</h1>
+		</div>
 		<p>This page is under construction.</p>
 	
 		<!-- Optional JavaScript -->
