--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<body>
 		<div id="header-page">
 			<h1>COFFEE HAUS</h1>
+			<h2>The future of Coffee.</h2>
 		</div>
 		<p>This page is under construction.</p>
 	
