--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
 		<div id="header-page">
 			<h1>COFFEE HAUS</h1>
 			<h2>The future of Coffee.</h2>
+			<a href="#" class="enquire" role="button">Enquire.</a>
 		</div>
-		<p>This page is under construction.</p>
+		
+		<div id="cards">
+
+		</div>
 	
 		<!-- Optional JavaScript -->
 	    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
