--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div id="header-page">
 			<h1>COFFEE HAUS</h1>
 			<h2>The future of Coffee.</h2>
-			<a href="#" class="enquire" role="button">Enquire.</a>
+			<a href="#" class="enquire" role="button">Enquire</a>
 		</div>
 		
 		<div class="container">
@@ -57,6 +57,12 @@
 			</div>
 		</div>
 	
+		<div class="footer">
+			<div id="footer">
+				<ul><li><a class="item" href="#">Contact Us</a></li>
+				<li><a class="item" href="#">Terms & Conditions</a></li>
+				<li><a class="item" href="#">Privacy</a></li></ul>
+		</div>
 		<!-- Optional JavaScript -->
 	    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
