order page skeleton

--- a/order.html
+++ b/order.html
@@ -1,1 +1,22 @@
-order.html
+<html>
+<head>
+</head>
+
+<body>
+	<h1>How would you like your coffee?</h1>
+
+	<form>
+		<!-- 
+		Flat white, latte, espresso, affogato, macchiato, chai latte, long black
+		
+		Sugar: no, half, one, two, three
+
+		Hot/cold
+
+		Milk: full cream, skim, zymil, soy, oat, rice, almond
+
+		Add personalised note:
+		-->
+	</form>
+</body>
+</html>
