added section: drink-order

--- a/order.html
+++ b/order.html
@@ -7,16 +7,32 @@
 
 	<form>
 		<!-- 
-		Flat white, latte, espresso, affogato, macchiato, chai latte, long black
-		
-		Sugar: no, half, one, two, three
+		espresso, affogato, macchiato, chai latte-->
+		<section class="drink-order">
+			<span>Drink: <br></span>
+			<input id="latte" name="drink" type="radiohead" value="latte">
+			<label for="latte">Latte</label>
+			<input id="long-black" name="drink" type="radiohead" value="long-black">
+			<label for="long-black">Long Black</label>
+			<input id="flat-white" name="drink" type="radiohead" value="flat-white">
+			<label for="flat-white">Flat White</label>
+			<input id="mocha" name="drink" type="radiohead" value="mocha">
+			<label for="mocha">Mocha</label>
+			<input id="espresso" name="drink" type="radiohead" value="espresso">
+			<label for="espresso">Espresso</label>
+			<input id="macchiato" name="drink" type="radiohead" value="macchiato">
+			<label for="macchiato">Nacchiato</label>
+			<input id="affogato" name="drink" type="radiohead" value="affogato">
+			<label for="affogato">Affogato</label>
+		</section>
+		<!-- Sugar: no, half, one, two, three -->
 
-		Hot/cold
+		<!-- Hot/cold -->
 
-		Milk: full cream, skim, zymil, soy, oat, rice, almond
+		<!-- Milk: full cream, skim, zymil, soy, oat, rice, almond -->
 
-		Add personalised note:
-		-->
+		<!-- Add personalised note: -->
+	
 	</form>
 </body>
 </html>
