--- a/order.html
+++ b/order.html
@@ -5,9 +5,8 @@
 <body>
 	<h1>How would you like your coffee?</h1>
 
-	<form>
-		<!-- 
-		espresso, affogato, macchiato, chai latte-->
+	<form action="" method="PUSH">
+
 		<section class="drink-order">
 			<span>Drink: <br></span>
 			<input id="latte" name="drink" type="radiohead" value="latte">
@@ -21,14 +20,20 @@
 			<input id="espresso" name="drink" type="radiohead" value="espresso">
 			<label for="espresso">Espresso</label>
 			<input id="macchiato" name="drink" type="radiohead" value="macchiato">
-			<label for="macchiato">Nacchiato</label>
+			<label for="macchiato">Macchiato</label>
 			<input id="affogato" name="drink" type="radiohead" value="affogato">
 			<label for="affogato">Affogato</label>
 		</section>
-		<!-- Sugar: no, half, one, two, three -->
+
+		<section class="sugar-order">
+			<span>
+				<label for="sugar">Sugar level:</label>
+			</span>
+			<input id="sugar" name="sugar" type="number" min="0.5" max="2">
+		</section>
 
 		<!-- Hot/cold -->
-
+		
 		<!-- Milk: full cream, skim, zymil, soy, oat, rice, almond -->
 
 		<!-- Add personalised note: -->
