--- a/order.html
+++ b/order.html
@@ -33,7 +33,13 @@
 		</section>
 
 		<!-- Hot/cold -->
-		
+		<section class="hot-cold">
+			<span>Hot or Cold?</span>
+				<input id="hot" name="hot-cold" type="radiohead" value="hot">
+				<label for="hot">Hot</label>
+				<input id="cold" name="hot-cold" type="radiohead" value="cold">
+				<label for="cold">Cold</label>
+		</section>
 		<!-- Milk: full cream, skim, zymil, soy, oat, rice, almond -->
 
 		<!-- Add personalised note: -->
