added section comments

--- a/order.html
+++ b/order.html
@@ -7,6 +7,7 @@
 
 	<form action="" method="PUSH">
 
+		<!-- Drink order -->
 		<section class="drink-order">
 			<span>Drink: <br></span>
 			<input id="latte" name="drink" type="radiohead" value="latte">
@@ -25,6 +26,7 @@
 			<label for="affogato">Affogato</label>
 		</section>
 
+		<!-- Sugar level -->
 		<section class="sugar-order">
 			<span>
 				<label for="sugar">Sugar level:</label>
