added milk order

--- a/order.html
+++ b/order.html
@@ -35,14 +35,37 @@
 		</section>
 
 		<!-- Hot/cold -->
-		<section class="hot-cold">
+		<section class="hot-cold-order">
 			<span>Hot or Cold?</span>
 				<input id="hot" name="hot-cold" type="radiohead" value="hot">
 				<label for="hot">Hot</label>
 				<input id="cold" name="hot-cold" type="radiohead" value="cold">
 				<label for="cold">Cold</label>
 		</section>
+		
 		<!-- Milk: full cream, skim, zymil, soy, oat, rice, almond -->
+		<section class="milk-order">
+			<span>Milk:</span>
+				<input id="full-cream" name="milk" type="radiohead" value="full-cream">
+				<label for="full-cream">Full Cream</label>
+				<input id="skim" name="milk" type="radiohead" value="skim">
+				<label for="skim">Skim</label>
+				<input id="zymil" name="milk" type="radiohead" value="zymil">
+				<label for="zymil">Zymil</label>
+				<input id="soy" name="milk" type="radiohead" value="soy">
+				<label for="soy">Soy</label>
+				<input id="almond" name="milk" type="radiohead" value="almond">
+				<label for="almond">Almond</label>
+				<input id="oat" name="milk" type="radiohead" value="oat">
+				<label for="oat">Oat</label>
+				<input id="rice" name="milk" type="radiohead" value="rice">
+				<label for="rice">Rice</label>
+				<input id="none" name="milk" type="radiohead" value="none">
+				<label for="none">N/A</label>
+		</section>
+
+		<!-- Extras: biccie or choccie -->
+
 
 		<!-- Add personalised note: -->
 	
