--- a/order.html
+++ b/order.html
@@ -9,7 +9,7 @@
 
 		<!-- Drink order -->
 		<section class="drink-order">
-			<span>Drink: <br></span>
+			<span>Drink: </span>
 			<input id="latte" name="drink" type="radiohead" value="latte">
 			<label for="latte">Latte</label>
 			<input id="long-black" name="drink" type="radiohead" value="long-black">
@@ -29,14 +29,14 @@
 		<!-- Sugar level -->
 		<section class="sugar-order">
 			<span>
-				<label for="sugar">Sugar level:</label>
+				<label for="sugar">Sugar level: </label>
 			</span>
 			<input id="sugar" name="sugar" type="number" min="0.5" max="2">
 		</section>
 
 		<!-- Hot/cold -->
 		<section class="hot-cold-order">
-			<span>Hot or Cold?</span>
+			<span>Hot or Cold? </span>
 				<input id="hot" name="hot-cold" type="radiohead" value="hot">
 				<label for="hot">Hot</label>
 				<input id="cold" name="hot-cold" type="radiohead" value="cold">
@@ -45,7 +45,7 @@
 		
 		<!-- Milk: full cream, skim, zymil, soy, oat, rice, almond -->
 		<section class="milk-order">
-			<span>Milk:</span>
+			<span>Milk: </span>
 				<input id="full-cream" name="milk" type="radiohead" value="full-cream">
 				<label for="full-cream">Full Cream</label>
 				<input id="skim" name="milk" type="radiohead" value="skim">
@@ -65,7 +65,13 @@
 		</section>
 
 		<!-- Extras: biccie or choccie -->
-
+		<section class="extras-order">
+			<span>Extras: </span>
+			<input id="cookie" name="extras" type="checkbox" value="cookie">
+			<label for="cookie">Cookie</label>
+			<input id="chocolate" name="extras" type="checkbox" value="chocolate">
+			<label for="chocolate">Chocolate</label>
+		</section>
 
 		<!-- Add personalised note: -->
 	
