added personalised note

--- a/order.html
+++ b/order.html
@@ -74,7 +74,10 @@
 		</section>
 
 		<!-- Add personalised note: -->
-	
+		<section class="note-order">
+			<span>Add a personalised note for a loved one: </span>
+			<input id="" name="note" type="textarea" rows="5" cols="50" maxlength="50">
+		</section>
 	</form>
 </body>
 </html>
