added navbar, connected order page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 
 	</head>
 	<body>
+		<div id="navbar">
+			<ul class="navbar-list">
+				<li id="navbar-list"><a href="#">Home</a></li>
+				<li id="navbar-list"><a href="#">Baristas</a></li>
+				<li id="navbar-list"><a href="#">Locations</a></li>
+				<li id="navbar-list"><a href="order.html">Order</a></li>
+			</ul>
+		</div>
+
 		<div id="header-page">
 			<h1>COFFEE HAUS</h1>
 			<h2>The future of Coffee.</h2>
