--- a/coffeehaus/index.html
+++ b/coffeehaus/index.html
@@ -5,9 +5,6 @@
 	    <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	    <!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
 		<link rel="stylesheet" href="style.css">
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,400;1,500&display=swap" rel="stylesheet">
@@ -15,22 +12,42 @@
 
 	</head>
 	<body>
-		<div id="navbar">
-			<ul class="navbar-list">
-				<li id="navbar-list"><a href="#">Home</a></li>
+		<nav id="nav">
+			<div id="home">
+				<h2><a href="index.html">Coffee haus</a></h2>
+			</div>
+			<!-- <ul class="navbar-menu">
+				<li id="navbar-list"><a href="#landing-page">Home</a></li>
 				<li id="navbar-list"><a href="#">Baristas</a></li>
 				<li id="navbar-list"><a href="#">Locations</a></li>
 				<li id="navbar-list"><a href="order.html">Order</a></li>
-			</ul>
-		</div>
+			</ul> -->
+		</nav>
 
-		<div id="header-page">
+		<div id="landing-page">
 			<h1>COFFEE HAUS</h1>
 			<h2>The future of Coffee.</h2>
 			<a href="#" class="enquire" role="button">Enquire</a>
 		</div>
+
+		<div id="blog-post">
+			<article>
+				<div id="right">
+				<h2>What we do</h2>
+				<p>Here at Coffee Haus, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <br></p>
+				<h3>with love , <br> coffee haus</h3>
+				</div>
+
+				<div id="left">
+				<!-- <figure>
+					<a><img id="blog-post" src="images/blog-post.jpeg" alt="Barista pouring coffee" /></a>
+				</figure> -->
+				</div>
+			</article>
+		</div>
 		
 		<div class="container">
+			<h2>our commitment to you.</h2>
 			<div class="row">
 				<div class="col col-sm-12 col-md-6 col-xl-3">
 					<div class="cards">
@@ -72,10 +89,6 @@
 				<li><a class="item" href="#">Terms & Conditions</a></li>
 				<li><a class="item" href="#">Privacy</a></li></ul>
 		</div>
-		<!-- Optional JavaScript -->
-	    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-	    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-	    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+		
 	</body>
 </html>
