bkg on form page

--- a/coffeehaus/order.html
+++ b/coffeehaus/order.html
@@ -12,11 +12,22 @@
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,400;1,500&display=swap" rel="stylesheet">
 </head>
 
+<nav id="nav">
+			<div id="home">
+				<h2><a href="index.html">Coffee haus</a></h2>
+			</div>
+			<!-- <ul class="navbar-menu">
+				<li id="navbar-list"><a href="#landing-page">Home</a></li>
+				<li id="navbar-list"><a href="#">Baristas</a></li>
+				<li id="navbar-list"><a href="#">Locations</a></li>
+				<li id="navbar-list"><a href="order.html">Order</a></li>
+			</ul> -->
+		</nav>
+
 <body id="order-html">
+	<form id="order-form" action="" method="PUSH">
+
 	<h1>How would you like your coffee?</h1>
-
-	<form action="" method="PUSH">
-
 		<!-- Drink order -->
 		<section class="drink-order">
 			<span>Drink: </span>
@@ -112,5 +123,12 @@
 		</section>
 
 	</form>
+
+	<div class="footer">
+			<div id="footer">
+				<ul><li><a class="item" href="#">Contact Us</a></li>
+				<li><a class="item" href="#">Terms & Conditions</a></li>
+				<li><a class="item" href="#">Privacy</a></li></ul>
+		</div>
 </body>
 </html>
