consolidate css, add menu page, change html layout

--- a/coffeehaus/index.html
+++ b/coffeehaus/index.html
@@ -1,84 +1,73 @@
-
 <html>
+
+<body>
+
 	<head>
-		<!-- Required meta tags -->
-	    <meta charset="utf-8">
+		<meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
 		<link rel="stylesheet" href="style.css">
-		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,400;1,500&display=swap" rel="stylesheet">
-		<title>COFFEE HAUS</title>
-
 	</head>
-	<body>
-		<nav id="nav">
-			<div id="home">
-				<h2><a href="index.html">Coffee haus</a></h2>
-			</div>
-			<!-- <ul class="navbar-menu">
-				<li id="navbar-list"><a href="#landing-page">Home</a></li>
-				<li id="navbar-list"><a href="#">Baristas</a></li>
-				<li id="navbar-list"><a href="#">Locations</a></li>
-				<li id="navbar-list"><a href="order.html">Order</a></li>
-			</ul> -->
+	
+	<main>
+		<nav>
+			<h2>coffee haus</h2>
+			<!-- home, menu, locations, order -->
 		</nav>
 
-		<div id="landing-page">
-			<h1>COFFEE HAUS</h1>
-			<h2>The future of Coffee.</h2>
-			<a href="#" class="enquire" role="button">Enquire</a>
+		<div id="landing-page" class="bkg">
+			<h1>coffee haus</h1>
+			<h3>the future of coffee.</h3>
+			<button id="enquire" class="clear"><a href="#" >Enquire</a></button>
 		</div>
 
-		<div id="blog-post">
-			<article>
-				<div id="right">
-				<h2>What we do</h2>
-				<p>Here at Coffee Haus, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <br></p>
-				<h3>with love , <br> coffee haus</h3>
-				</div>
-
-				<div id="left">
-				<!-- <figure>
-					<a><img id="blog-post" src="images/blog-post.jpeg" alt="Barista pouring coffee" /></a>
-				</figure> -->
-				</div>
+		<div id="what-we-do" class="bkg">
+			<article ="blog-post">
+				
+				<h4>What we do</h4>
+				<p>Here at Coffee Haus, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<h5>with love,<br>coffee haus</h5>
 			</article>
 		</div>
-		
-		<div class="container">
-			<h2>our commitment to you.</h2>
+
+		<div id="commitment-page">
+			<h4>Our commitment to you.</h4>
 			<div class="cards">
-				<img src="images/coffee.png" alt="coffee-cup">
+				<img src="images/coffee.png" alt="coffee-cup" height="140" width="auto">
 				<h3>Bold Flavours</h3>
 				<p>Deep, dark flavours to wake up your senses.</p>
 			</div>
 
 			<div class="cards">
-				<img src="images/hipster.png" alt="barista">
+				<img src="images/hipster.png" alt="barista" height="140" width="auto">
 				<h3>World-class Baristas</h3>
 				<p>To guide you through an unforgettable experience from coffee beans to your daily cup of Joe.</p>
 			</div>
 
 			<div class="cards">
-				<img src="images/seedling.png" alt="seedling">
+				<img src="images/seedling.png" alt="seedling" height="140" width="auto">
 				<h3>Sustainable Ethics</h3>
 				<p>Ensuring quality, sustainable practices to deliver the best coffee for as long as we can.</p>
 			</div>
 
 			<div class="cards">
-				<img src="images/heart.png" alt="heart">
+				<img src="images/heart.png" alt="heart" height="140" width="auto">
 				<h3>Comunity Outreach</h3>
 				<p>Giving back to our community through community-driven projects.</p>
 			</div>
 		</div>
-	
-		<div class="footer">
-			<div id="footer">
-				<ul><li><a class="item" href="#">Contact Us</a></li>
-				<li><a class="item" href="#">Terms & Conditions</a></li>
-				<li><a class="item" href="#">Privacy</a></li></ul>
-		</div>
 		
-	</body>
+		<footer>
+			<ul>
+				<li><a class="footer-item" href="#">Privacy</a></li>
+				<li><a class="footer-item" href="#">Terms & Conditions</a></li>
+				<li><a class="footer-item" href="#">Locations</a></li>
+				<li><a class="footer-item" href="#">Contact Us</a></li>
+			</ul>
+		</footer>
+
+	</main>
+
+</body>
+
 </html>
