flex-box for cards, update card contents

--- a/coffeehaus/index.html
+++ b/coffeehaus/index.html
@@ -33,27 +33,27 @@
 		<div id="commitment-page">
 			<h4>Our commitment to you.</h4>
 			<div class="cards">
-				<img src="images/coffee.png" alt="coffee-cup" height="140" width="auto">
+				<img src="images/coffee.png" alt="coffee-cup" height="120" width="auto">
 				<h5>Bold Flavours</h5>
-				<p>Deep, dark flavours to wake up your senses.</p>
+				<p>Deep flavours from dark-roasted beans to wake up your senses.</p>
 			</div>
 
 			<div class="cards">
-				<img src="images/hipster.png" alt="barista" height="140" width="auto">
+				<img src="images/hipster.png" alt="barista" height="120" width="auto">
 				<h5>World-class Baristas</h5>
-				<p>To guide you through an unforgettable experience from coffee beans to your daily cup of Joe.</p>
+				<p>To guide you through an unforgettable experience from the planting of the coffee beans to your daily cup of Joe.</p>
 			</div>
 
 			<div class="cards">
-				<img src="images/seedling.png" alt="seedling" height="140" width="auto">
+				<img src="images/seedling.png" alt="seedling" height="120" width="auto">
 				<h5>Sustainable Ethics</h5>
-				<p>Ensuring quality, sustainable practices to deliver the best coffee for as long as we can.</p>
+				<p>Ensuring sustainable, quality practices to deliver the best coffee for as long as we can.</p>
 			</div>
 
 			<div class="cards">
-				<img src="images/heart.png" alt="heart" height="140" width="auto">
-				<h5>Comunity Outreach</h5>
-				<p>Giving back to our community through community-driven projects.</p>
+				<img src="images/heart.png" alt="heart" height="120" width="auto">
+				<h5>Community Outreach</h5>
+				<p>Building a supportive, loving neighbourhood through community-driven projects.</p>
 			</div>
 		</div>
 		
