modified blog post, added 2 sections

--- a/coffeehaus/index.html
+++ b/coffeehaus/index.html
@@ -21,12 +21,15 @@
 			<button id="enquire" class="clear"><a href="#" >Enquire</a></button>
 		</div>
 
-		<div id="what-we-do" class="bkg">
-			<article ="blog-post">
-				
-				<h4>What we do</h4>
-				<p>Here at Coffee Haus, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-				<h5>with love,<br>coffee haus</h5>
+		<div id="what-we-do">
+			<article id="blog-post" class="bkg">
+				<div id="blog-head" class="bkg">
+					<h4>here's what we do.</h4>
+				</div>
+				<div id="blog-para" class="bkg">
+					<p>Here at Coffee Haus, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<h5>with love,<br>coffee haus</h5>
+				</div>
 			</article>
 		</div>
 
